@@ -2,7 +2,6 @@
 {% load i18n field_verbose_name %}
 
 {% block detailspanel %}
-    {{ block.super }}
     <table class="table-striped table-bordered table">
         <tr>
             <th>{{ object|verbose:"name" }}</th>
@@ -23,4 +22,5 @@
 
         {% include "mapentity/trackinfo_fragment.html" %}
     </table>
+    {{ block.super }}
 {% endblock detailspanel %}
